--- a/projektdjango/aplikacja1/templates/index.html
+++ b/projektdjango/aplikacja1/templates/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="pl">
 <head>
+    <meta charset="UTF-8">
     <title> Employees </title>
 </head>
 <body>
     {% for i in employees %}
-    {{ i.first_name }} {{ i.last_name }} <a href="http://127.0.0.1:8000/store/{{ i.Store.id }}/"> Link do sklepu </a> {{ i.Store.name }} {{ i.Store.location }} <br>
+    {{ i.first_name }} {{ i.last_name }} <a href="http://127.0.0.1:8000/store/store/{{ i.Store.id }}/"> Link do sklepu </a>  <!-- {{ i.Store.name }} {{ i.Store.location }} --> <br>
     {% endfor %}
 </body>
 </html>
